[package]
name = "venture"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "A TUI productivity tool that turns your workday into a medieval RPG."

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
rand = "0.10.1"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"

[package.metadata.deb]
maintainer = "Nico Lang <nicolang0416@gmail.com>"
copyright = "2026, Nico Lang"
extended-description = """\
A TUI productivity tool that turns your workday into a medieval RPG.
"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/venture", "usr/bin/venture", "755"],
]